# rust-gsteamer-exercise

./: Cargo.toml
src/: main.rs
src/border/: mod.rs
src/diff_plugin/: imp.rs  mod.rs
src/rgb2gray/: mod.rs
