[package]
name = "seamcraving_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gstreamer = "0.21.3"
gst = { package = "gstreamer", git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git"}
gst-base = { package = "gstreamer-base", git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git"}
gst-video = { package = "gstreamer-video", git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git"}
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", features=["use_glib"] }
once_cell = "1.0"
# anyhow = "1.0"
anyhow = { version = "1", features = ["backtrace"] }
derive_more = "0.99.5"
futures = "0.3"
